--- a/src/components/layouts/layout-contained/layout-contained.scss
+++ b/src/components/layouts/layout-contained/layout-contained.scss
@@ -6,7 +6,7 @@
 // In addition to the containment it adds distances as well so a variant without
 // extra distances is needed.
 //
-// .laytout-contained - Resets the top and bottom paddings.
+// .layout-contained--only-containment - Resets the top and bottom paddings.
 
 %layout-contained,
 .layout-contained {
