--- a/src/components/components/leader-tools/leader-tools.scss
+++ b/src/components/components/leader-tools/leader-tools.scss
@@ -14,6 +14,10 @@
     height: 20px;
   }
 
+  &:hover {
+    background-color: color('grey-another-extra-light');
+  }
+
   &__icon {
     @include margin-left(10px);
     width: 20px;
@@ -36,7 +40,6 @@
   &__title {
     color: color('grey-dark');
     display: inline-block;
-
 
     &:hover,
     &:focus {
