Cahnge the color of the leaders tools extrnal link icon.

--- a/src/components/base-styles/init/_colors.scss
+++ b/src/components/base-styles/init/_colors.scss
@@ -32,6 +32,7 @@ $chroma: add-colors((
 
         light-navy:             #122E63,
         dark-sky-blue:          #4A90E2,
+        blue-dark:              #12B4BC,
         blue-light:             #12CACB,
 
         light-green:            #D6F2E9,
