--- a/src/components/base-styles/init/_colors.scss
+++ b/src/components/base-styles/init/_colors.scss
@@ -23,6 +23,7 @@ $chroma: add-colors((
         grey-underline:         #e6e6e6,
         grey-light:             #ABABAB,
         grey-another-extra-light: #E3E3E3,
+        grey-yet-another-extra-light: #efeff2,
         grey-extra-light:       #D2D2D2,
         grey-mozilla:           #38383d,
         brown-grey:             #929292,
