--- a/src/components/components/teaser-box/teaser-box.scss
+++ b/src/components/components/teaser-box/teaser-box.scss
@@ -5,49 +5,20 @@
 // .teaser-box--dummy: Do not display data, but a grey horizontal placeholder line.
 
 .teaser-box {
-  width: 100%;
+  @include margin-left(21px);
   margin-bottom: 15px;
+  min-width: 265px;
 
-  &__wrapper-link {
+  &:last-child {
+    // REVIEW: The rule is accepted. It won't take effect though.
+    @include margin-right(21px);
   }
 
-  &__image-wrapper {
-    width: 100px;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  &__image {
-    width: auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
-
-  }
-
-  &__text {
-    display: flex;
-    padding: 10px 20px 10px 15px;
-    flex-direction: column;
-    color: color('grey-dark');
+  @include breakpoint($tablet) {
+    @include margin-left(0);
+    // @include margin-bottom(0);
+    min-width: none;
     width: 100%;
-  }
-
-  &__title {
-
-  }
-
-  &__inner {
-    display: flex;
-  }
-
-  &__date {
-    display: block;
-    text-align: right;
-    color: color('grey-another');
-    margin-top: auto;
   }
 
   &__list {
@@ -55,7 +26,94 @@
   }
 
   &__list-wrapper {
-    margin-top: 35px;
+    @include padding-top(14px);
+    @include margin-top(7px);
+    display: flex;
+    max-width: 100%;
+    width: -moz-fit-content;
+    overflow-x: scroll;
+    background-color: color('grey-dark-another');
+    box-shadow: 0px -1px 1px 0px rgba(0,0,0,0.35);
+
+    @include breakpoint($tablet) {
+      @include margin-top(35px);
+      padding-top: 0;
+      overflow-x: visible;
+      display: inline-block;
+      background-color: transparent;
+      box-shadow: none;
+      width: 100%;
+    }
+  }
+
+  &__list-title {
+    @include margin-top(19px);
+    @include padding-left(20px);
+
+    @include breakpoint($tablet) {
+      margin-top: auto;
+      padding-left: 0;
+
+    }
+  }
+
+  &__wrapper-link {
+  }
+
+  &__image-wrapper {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @include breakpoint($tablet) {
+      width: 100px;
+    }
+  }
+
+  &__image {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+
+    @include breakpoint($tablet) {
+      width: auto;
+    }
+
+  }
+
+  &__text {
+    display: flex;
+    padding: 10px 20px 10px 0px;
+    flex-direction: column;
+    color: color('grey-dark');
+    width: 100%;
+
+    @include breakpoint($tablet) {
+      padding: 10px 20px 10px 15px;
+    }
+  }
+
+  &__inner {
+    display: flex;
+    flex-wrap: wrap;
+
+    @include breakpoint($tablet) {
+      flex-wrap: nowrap;
+    }
+  }
+
+  &__date {
+    display: block;
+    text-align: right;
+    color: color('grey-another');
+    @include margin-top(2);
+
+    @include breakpoint($tablet) {
+      margin-top: auto;
+    }
   }
 
   &__dummy-row {
