--- a/src/components/components/promoted-box/promoted-box.scss
+++ b/src/components/components/promoted-box/promoted-box.scss
@@ -5,6 +5,15 @@
   background-color: color('light-green');
   display: inline-block;
 
+  &__wrapper {
+    display: flex;
+    justify-content: center;
+
+    @include breakpoint($tablet) {
+      justify-content: flex-end;
+    }
+  }
+
   &__title {
     @include font-size(20px);
     @include line-height(27px);
@@ -33,62 +42,21 @@
       font-size: 16px;
       line-height: 20px;
       font-weight: 800;
-      border: 2px solid color('light-navy');
-      border-radius: 100%;
       width: 25px;
       height: 25px;
       display: inline-block;
       text-align: center;
       vertical-align: middle;
-      margin-right: 5px;
-      box-sizing: border-box;
-      opacity: .3;
-
     }
 
-    &::after {
-      content: '';
-      box-sizing: border-box;
-      position: absolute;
-      width: 25px;
-      height: 25px;
-      background-color: color('light-navy');
-      border-radius: 100%;
-      opacity: 0.1;
-      top: 0;
-      left: 0;
+    @include breakpoint($mobile) {
 
-    }
-
-    &:nth-child(1) {
-      &::after {
-        top: 1px;
-        left: 4px;
+      &:nth-child(2) {
+        @include margin-left(45px);
       }
-    }
 
-    &:nth-child(2) {
-      @include margin-left(45px);
-
-      &::after {
-        top: 2px;
-        left: -2px;
-      }
-    }
-
-    &:nth-child(3) {
-      &::after {
-        top: 0px;
-        left: 3px;
-      }
-    }
-
-    &:nth-child(4) {
-      @include margin-left(25px);
-      
-      &::after {
-        top: -1px;
-        left: -3px;
+      &:nth-child(4) {
+        @include margin-left(25px);
       }
     }
   }
