--- a/src/components/components/club-teaser-list/club-teaser.scss
+++ b/src/components/components/club-teaser-list/club-teaser.scss
@@ -1,3 +1,51 @@
+@import './../../base-styles/init/init';
+
 .club-teaser {
-    
+  @include padding(25px);
+  min-width: 360px;
+  display: flex;
+  flex-wrap: wrap;
+
+  &__content-wrapper {
+    border-radius: 2px;
+  }
+
+  &__content {
+    width: auto;
+    border-radius: 2px;
+    margin: 0;
+  }
+
+  &__image {
+    width: 73px;
+    height: 73px;
+  }
+
+  &__text {
+    @include padding-left(17px);
+  }
+
+  &__title {
+    font-weight: 600;
+    display: block;
+  }
+
+  &__description {
+    @include font-size(12px);
+    display: block;
+  }
+
+  &__button {
+    @include margin-top(8px);
+    font-weight: 600;
+  }
+
+  &__link {
+    &::after {
+      content: '>';
+      @include font-size(16px);
+      vertical-align: middle;
+      padding-left: 8px;
+    }
+  }
 }
