--- a/src/components/components/map/map.scss
+++ b/src/components/components/map/map.scss
@@ -1,3 +1,34 @@
 .map {
+  &__popup  {
+    min-width: 360px;
 
+    // overide map popup inline CSS
+    bottom: 0 !important;
+    left: 0 !important;
+    margin: 0 !important;
+    // overide stop.
+
+    .club-teaser {
+      min-width: 360px;
+      width: 100%;
+    }
+
+    .shadow-box {
+      box-shadow: none;
+    }
+  }
+
+  .leaflet-popup-content-wrapper {
+    padding: 0;
+    border-radius: 2px;
+  }
+
+  .leaflet-popup-content {
+    width: 100%;
+    margin: 0;
+  }
+
+  .leaflet-popup-tip-container {
+    display: none;
+  }
 }
