--- a/src/components/components/teaser-box/teaser-box.scss
+++ b/src/components/components/teaser-box/teaser-box.scss
@@ -30,9 +30,9 @@
     @include padding-left(20px);
 
     @include breakpoint($tablet) {
+      @include margin-bottom(30px);
       margin-top: auto;
       padding-left: 0;
-
     }
   }
 
