--- a/src/components/layouts/layout-scroll/layout-scroll.scss
+++ b/src/components/layouts/layout-scroll/layout-scroll.scss
@@ -6,11 +6,11 @@
 .layout-scroll,
 %layout-scroll {
   @include breakpoint(0 $tablet - 1px) {
-
     display: flex;
     background-color: color('grey-dark-another');
     background-color: rgba(216, 216, 216, 0.15);
     mix-blend-mode: multiply;
+    margin-top: 8px;
     margin-left: -$gutters-mobile;
     margin-right: -$gutters-mobile;
     padding-left: $gutters-mobile/2;
@@ -19,17 +19,25 @@
     overflow: auto;
     box-shadow: inset 0 -1px 1px 0 rgba(0, 0, 0, 0.0525), inset 0 1px 1px 0 rgba(0, 0, 0, 0.0525);
 
-    &__item {
-      width: 80%;
-      min-width: 80%;
-      margin-left: $gutters-mobile/2;
-      margin-right: $gutters-mobile/2;
+    .layout-scroll,
+    %layout-scroll {
+      &__item {
+        margin-left: $gutters-mobile/2;
+        margin-right: $gutters-mobile/2;
+        margin-bottom: 15px;
+      }
+    }
 
+    &--stretch-items {
+      .layout-scroll,
+      %layout-scroll {
+        &__item {
+          flex-shrink: 0;
+          width: 80%;
+          min-width: 265px;
+          max-width: 350px;
+        }
+      }
     }
   }
-}
-
-// Dom specific code.
-.layout-scroll > div {
-  @extend %layout-scroll__item;
 }
