Creates shape component and adds it to opportunities member.

--- a/src/components/components/opportunities-member/opportunities-member.scss
+++ b/src/components/components/opportunities-member/opportunities-member.scss
@@ -14,9 +14,18 @@
 
   &__info {
     margin-bottom: 20px;
+    position: relative;
 
     @include breakpoint($tablet) {
       margin-bottom: 40px;
     }
+  }
+
+  &__shape {
+    position: absolute;
+    right: 0;
+    bottom: -22px;
+    transform: rotate(-105deg);
+    z-index: -1;
   }
 }
