--- a/src/components/components/shape/shape.scss
+++ b/src/components/components/shape/shape.scss
@@ -14,6 +14,6 @@
     opacity: 0.2;
     border-left: 56px solid transparent;
     border-right: 56px solid transparent;
-    border-bottom: 128px solid color(sunny-yellow);;
+    border-bottom: 128px solid color(sunny-yellow);
   }
 }
