--- a/src/components/components/promoted-box/promoted-box.scss
+++ b/src/components/components/promoted-box/promoted-box.scss
@@ -1,13 +1,25 @@
 @import './../../base-styles/init/init.scss';
 
 .promoted-box {
-  padding: 22px 35px 40px;
+  //padding: 22px 35px 40px;
   background-color: color('light-green');
-  display: inline-block;
+  width: 350px;
+  max-width: 100%;
+  display: flex;
+  position: relative;
+
+  &__inner {
+    padding: 22px 10px 40px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
   &__wrapper {
     display: flex;
-    justify-content: center;
+    //justify-content: center;
+    //flex-shrink: 0;
+    //flex-grow: 1;
+    //min-width: 350px;
 
     @include breakpoint($tablet) {
       justify-content: flex-end;
@@ -59,5 +71,13 @@
         @include margin-left(25px);
       }
     }
+  }
+
+  &__shape {
+    position: absolute;
+    right: -20px;
+    bottom: -22px;
+    transform: rotate(-105deg);
+    z-index: -1;
   }
 }
