--- a/src/components/layouts/layout-base/layout-base.scss
+++ b/src/components/layouts/layout-base/layout-base.scss
@@ -5,6 +5,7 @@
 %layout-base {
   padding-top: 120px;
   padding-bottom: 60px;
+  overflow: hidden;
 
   @include breakpoint($tablet) {
     padding-top: 190px;
