Makes opportunities page above the fold responsive.

--- a/src/components/components/opportunities-member/opportunities-member.scss
+++ b/src/components/components/opportunities-member/opportunities-member.scss
@@ -9,8 +9,8 @@
     display: inline-block;
     max-width: 730px;
 
-    @include breakpoint($tablet) {
-      padding-right: 20px;
+    @include breakpoint($desktop) {
+      padding-right: 40px;
     }
   }
 
