--- a/src/components/components/external-link-box/external-link-box.scss
+++ b/src/components/components/external-link-box/external-link-box.scss
@@ -5,6 +5,8 @@
 */
 
 .external-link-box {
+  display: flex;
+
   &__wrapper-link {
     display: flex;
     width: 160px;
@@ -19,6 +21,13 @@
     }
   }
 
+  // Takes up all container height.
+  &__link-inner {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
   &__image-wrapper {
     width: 100%;
     height: 75px;
@@ -26,6 +35,7 @@
     justify-content: center;
     align-items: center;
     padding: 15px;
+    flex-grow: 0;
   }
 
   &__image {
@@ -37,13 +47,28 @@
 
   &__text {
     @include font-size(14px);
-    @include line-height(11px);
+    @include line-height(16px);
     width: 100%;
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 2;
     padding: 10px;
-    background-color: color('grey-dark-another');
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
+    position: relative;
+    z-index: 1;
+
+    &:after {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: color('grey-dark-another');
+      z-index: -1;
+      opacity: .25;
+    }
   }
 
   &__title {
@@ -69,5 +94,8 @@
     @include line-height(11px);
     color: color('grey-another');
     display: block;
+    margin-top: auto;
+    padding-top: 5px;
+    width: 100%;
   }
 }
