--- a/src/components/components/shadow-box/shadow-box.scss
+++ b/src/components/components/shadow-box/shadow-box.scss
@@ -10,6 +10,7 @@
   border-radius: 4px;
   padding: 15px 20px;
   display: block;
+  transition: .2s cubic-bezier(.190, 1.000, .220, 1.000); /* easeOutExpo */
 
   &--zero-radius {
     border-radius: 0;
@@ -22,11 +23,14 @@
   &--small-paddings {
     padding: 10px;
   }
+}
 
-  a & {
-    &:hover,
-    &:focus {
-      cursor: pointer;
+a {
+  &:hover,
+  &:focus {
+    .shadow-box,
+    %shadow-box {
+      box-shadow: 0 1px 4px 0 rgba(0,0,0,0.5);
     }
   }
 }
