--- a/src/components/components/member-training-resources/member-training-resources.scss
+++ b/src/components/components/member-training-resources/member-training-resources.scss
@@ -22,6 +22,8 @@
 
   &__wrapper-link {
     padding: 0;
+    display: flex;
+    height: 100%;
   }
 
   &__image-wrapper {
@@ -33,8 +35,12 @@
     align-items: center;
 
     @include breakpoint($tablet) {
-      height: 100px;
-      width: 100px;
+      height: 110px;
+      width: 123px;
+    }
+
+    @include breakpoint($desktop) {
+      flex-shrink: 0;
     }
   }
 
@@ -58,7 +64,11 @@
     }
 
     @include breakpoint($tablet) {
-      @include padding-left(23px);
+      @include padding-left(13px);
+    }
+
+    @include breakpoint($desktop) {
+      @include padding-right(10px);
     }
   }
 
