--- a/src/components/base-styles/init/_colors.scss
+++ b/src/components/base-styles/init/_colors.scss
@@ -36,6 +36,7 @@ $chroma: add-colors((
         light-navy:             #122E63,
         dark-sky-blue:          #4A90E2,
         blue-dark:              #12B4BC,
+        blue-medium:            #4087ed,
         blue-light:             #12CACB,
 
         light-green:            #D6F2E9,
