--- a/src/components/components/blockquote-box/blockquote-box.scss
+++ b/src/components/components/blockquote-box/blockquote-box.scss
@@ -1,3 +1,126 @@
+@import "../../base-styles/init/init";
+
 .blockquote-box {
-  background-color: color(blue-light);
+  background-color: color('blue-medium');
+  color: color('white');
+  text-align: center;
+  padding: 9px 14px;
+  border-radius: 4px;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  overflow: hidden;
+
+  @include breakpoint($mobile-small) {
+    padding: 10px 19px;
+  }
+
+  @include breakpoint($desktop) {
+    padding: 12px 25px;
+  }
+
+  &__blockquote {
+    margin: 0 auto;
+    max-width: 88%;
+
+
+    @include breakpoint($mobile-small) {
+      max-width: 474px;
+    }
+
+    @include breakpoint($desktop) {
+      max-width: 88%;
+    }
+  }
+
+  &__text {
+    @include font-size(16px);
+    @include line-height(23px);
+    font-style: italic;
+    letter-spacing: -.2px;
+    position: relative;
+    padding: 10px 10px 8px;
+    margin: 0;
+
+    @include breakpoint($mobile-small) {
+      @include font-size(22px);
+      @include line-height(33px);
+      letter-spacing: -.3px;
+    }
+
+    @include breakpoint($desktop) {
+      @include font-size(26px);
+      @include line-height(37px);
+      letter-spacing: -.4px;
+    }
+  }
+
+  &__svg {
+    position: absolute;
+    opacity: .15;
+    transform: scale(.6);
+
+    &--before {
+      top: -15px;
+      left: -35px;
+    }
+
+    &--after {
+      bottom: -28px;
+      right: -35px;
+    }
+
+    @include breakpoint($mobile-small) {
+      transform: scale(.7);
+
+      &--before {
+        top: -15px;
+        left: -22px;
+      }
+
+      &--after {
+        bottom: -28px;
+        right: -25px;
+      }
+
+    }
+
+    @include breakpoint($desktop) {
+      transform: scale(1);
+
+      &--before {
+        top: -14px;
+        left: -30px;
+      }
+
+      &--after {
+        bottom: -35px;
+        right: -35px;
+      }
+    }
+  }
+
+  &__cite {
+    @include line-height(15px);
+    @include font-size(12px);
+    color: color('seafoam-blue');
+    padding-top: 5px;
+    display: block;
+
+    @include breakpoint($mobile-small) {
+      @include line-height(20px);
+      @include font-size(15px);
+    }
+
+    @include breakpoint($desktop) {
+      @include line-height(26px);
+      @include font-size(19px);
+    }
+  }
+
+  &__wave {
+
+  }
 }
