--- a/src/components/layouts/layout-custom-grid/layout-custom-grid.scss
+++ b/src/components/layouts/layout-custom-grid/layout-custom-grid.scss
@@ -4,47 +4,85 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: $gutters-mobile;
+  grid-auto-rows: 1fr;
 
   &__item {
+    display: flex;
+
     &--1 {
-      background-color: red;
       grid-row: 1 / span 2;
       grid-column: 1;
     }
 
     &--2 {
-      background-color: green;
       grid-column: 2;
     }
 
     &--3 {
-      background-color: blue;
       grid-column: 2;
       grid-row: 2 / span 2;
     }
 
     &--4 {
-      background-color: pink;
       grid-column: 1;
       grid-row: 3;
     }
 
     &--5 {
-      background-color: orange;
       grid-row: 4 / span 2;
       grid-column: 1 / span 2;
     }
 
     &--6 {
-      background-color: yellow;
       grid-row: 6;
       grid-column: 1 / span 2;
     }
   }
 
+  @include breakpoint($tablet) {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: $gutters-tablet;
+    grid-auto-rows: 1fr;
+
+    &__item {
+      &--1 {
+        grid-row: 1 / span 2;
+        grid-column: 1;
+      }
+
+      &--2 {
+        grid-row: 3;
+        grid-column: 2;
+      }
+
+      &--3 {
+        grid-column: 3;
+        grid-row: 3 / span 2;
+      }
+
+      &--4 {
+        grid-column: 1;
+        grid-row: 3;
+      }
+
+      &--5 {
+        grid-row: 1 / span 2;
+        grid-column: 2 / span 2;
+      }
+
+      &--6 {
+        grid-row: 4;
+        grid-column: 1 / span 2;
+      }
+    }
+  }
+
   @include breakpoint($desktop) {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: $gutters-desktop;
+  }
+
+  @include breakpoint($desktop-large) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 
     &__item {
       &--2 {
