--- a/src/components/components/shape/shape.scss
+++ b/src/components/components/shape/shape.scss
@@ -23,7 +23,7 @@
   &--triangle {
     width: 0;
     height: 0;
-    opacity: 0.2;
+    opacity: 0.15;
     border-left: 56px solid transparent;
     border-right: 56px solid transparent;
     border-bottom: 128px solid color('white');
@@ -34,6 +34,7 @@
     height: 86px;
     opacity: 0.55;
     background-color: color('white');
+    border-radius: 50%;
   }
 
   &--square {
